# pydra-datalad

./: .gitignore  README.md  pyproject.toml
.github/workflows/: pythonpackage.yml
pydra/tasks/datalad/: __init__.py
pydra/tasks/datalad/interface/: datalad.py
pydra/tasks/datalad/tests/: test_interface.py  utils.py
pydra/tasks/datalad/utils/: __init__.py
